--- a/example_home_assistant_configuration.yaml
+++ b/example_home_assistant_configuration.yaml
@@ -7,12 +7,13 @@ mqtt:
   
   
 light:  
-  - platform: mqtt_json  
+  - platform: mqtt
+    schema: json  
     name: "SN1 LED"  
     state_topic: "bruh/sensornode1"  
     command_topic: "bruh/sensornode1/set"  
     brightness: true  
-    flash: true  
+    #flash: true  
     rgb: true  
     optimistic: false  
     qos: 0  
